--- a/index.html
+++ b/index.html
@@ -2,9 +2,20 @@
 <html>
   <head>
     <title>Home Page</title>
+	<style>
+		body {background-color: powderblue;}
+		h1   {color: blue;}
+		p    {color: red;}
+	</style>
   </head>
   <body>
-    <h1>About me</h1>
+    <h1>Home Page</h1>
+	
+	<h2>About Me </h2>
     <p>This is a pragraph.</p>
+
+	<h2>Reseearch interest</h2>
+    <p>This is another pragraph.</p>
+
   </body>
 </html>
