--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
   <head>
     <title>Home Page</title>
 	<style>
-		body {background-color: powderblue;}
-		h1   {color: blue;}
-		p    {color: red;}
+		body {background-color: aliceblue;}
+		h1   {color: darkblue;}
+		p    {color: darkgray;}
 	</style>
   </head>
   <body>
     <h1>Home Page</h1>
 	
 	<h2>About Me </h2>
-    <p>This is a pragraph.</p>
+    <p>This is a paragraph.</p>
 
-	<h2>Reseearch interest</h2>
-    <p>This is another pragraph.</p>
+	<h2>Research interest</h2>
+    <p>This is another paragraph.</p>
 
   </body>
 </html>
