--- a/webpage/public/index.html
+++ b/webpage/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Personal Webpage"
+      content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,105 +24,20 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>William Frier</title>
-
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-    <!-- Image cropper is to crop image as a circle for profile pic -->
-    <style>
-      .image-cropper {
-        width: 200px;
-        height: 200px;
-        overflow: hidden;
-        border-radius: 50%;
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-      }
-    </style>
+    <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <!--
+      This HTML file is a template.
+      If you open it directly in the browser, you will see an empty page.
 
-    <div class="p-5 bg-dark text-white text-center">
-      <div class="image-cropper">
-        <img src="%PUBLIC_URL%/me.jpg" alt="picture of William Frier" width = "200" height="300">
-      </div>
-      <h1>William Frier</h1>
-      <!--div id="like-button-root"></div-->
-    </div>
+      You can add webfonts, meta tags, or analytics to this file.
+      The build step will place the bundled scripts into the <body> tag.
 
-    <div class="sticky-top" id="navbar_root"></div>
-
-    <div class="container-sm mt-3 pt-5" id="Me">
-      <h2>Hello !</h2>
-      <p>I am the Lead Haptic Researcher at Ultraleap, in Bristol (UK).
-      My research is about conveying touch sensation without any contact!
-      Specifically, I am using array of ultrasound speakers to induce touch at a distance.
-      From acoustic, to psychophysics and from skin mechanics to human computer interaction, 
-      I am curious about all the aspects of mid-air haptics and what makes it possible.
-      <br>
-      <br>
-      Mixing industrial R&D and academic research, I have the chance to work on cutting-edge apparatus and state-of-the-art equipment, and to publish in journals and conference.
-      Through this unique position, I want to show that research in Industry can be of quality without being secretive.
-      <br>
-      <br>
-      I am currently the recipient of a UKRI funded Future Leaders Fellowship and Ultraleap co-PI for the EU funded PRO-ACT/H2020 Touchless projects.
-      Before that, I was Ultraleap co-PI for the project FET-OPEN/H2020 H-Reality and key-person for the project Innovation Launchpad ETexturess, both fundeed by the EU.
-      </p>
-        
-    </div>
-  
-    <div  class="container-sm mt-3 pt-5" id="Interests" >
-      <h2>Research Interest </h2>
-      <div class="row">
-      <div class="col-lg-4 pt-3">
-        <h3 class="card-title">Touching Ultrasound</h3>
-        <p class="card-text" style="width:90%"> Have you ever been to a concert and feel the bass in your chest?
-        What you felt is called Acoustic Radiation Pressure.
-        And while it will shake your whole body when it's audible sound, it only vibrates a small point on your skin when it's ultrasound.
-        Mid-air haptics, via ultrasound phased array, can control this phenomenon to produce touch.
-        By applying Acoustic Radiation Pressure to your palm (thank you hand tracking), we can deflect your skin and render any sort of tactile effects.
-        But what is the relationship between ultrasound phased array output, skin displacement and touch perception?
-        Can we do better touch sensation?
-        </p>
-      </div>
-      
-      <div class="col-lg-4 pt-3">
-        <h3 class="card-title">Designing Touch</h3>
-        <p class ="card-text" style="width:90%"> 
-        Our sense of touch is not sensitive to ultrasonic frequencies, so how can mid-air haptics convey different tactile effects?
-        The answer is modulation techniques.
-        Amplitude Modulation and Spatiotemporal Modulation are the most common ones but there are more. 
-        So with so many techniques and associated parameters, how to design touch with mid-air haptics?
-        What is the relationship between modulation parameters and perception?
-        Can we convey shapes, textures, buttons or even emotions? 
-        </p>
-      </div>
-  
-      <div class="col-lg-4 pt-3">
-        <h3 class="card-title">Human Computer Interaction</h3>
-        <p class="card-text" style="width:90%"> 
-        Mid-air haptics enable spatial interactions with tactile feedback directly on your hands, without wearables or controlers.
-        One can finally reach out and touch the digital world!
-        Now, that we open a new realm of possibilities, what are the best practice?
-        What are the opportunities and advantages?
-        When, where and how is it best to provide virtual touch, whilst keeping the interaction natural?
-        </p>
-      </div>
-      </div>
-    </div>
-  
-  
-    <div  class="container-sm mt-3 pt-5" id="Publications">
-        <h2>Publications </h2>
-        <h3>Article in Journals</h3>
-        <h3>Article in Proceedings</h3>
-        <h3>Short Article in Proceedings</h3>
-        <h3>Demonstrations</h3>
-        <h3>Book and Chapters in books</h3>
-        <h3>Patents</h3>
-    </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+      To begin the development, run `npm start` or `yarn start`.
+      To create a production bundle, use `npm run build` or `yarn build`.
+    -->
   </body>
 </html>
